k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postmark-api-lb
  namespace: postmark
spec:
  selector:
    app: postmark-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
